--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -136,7 +136,7 @@ jobs:
       uses: hashicorp/setup-terraform@v1
     
     - name: Terraform Init
-      run: terraform init
+      run: terraform init -reconfigure
 
     - name: Terraform Format
       run: terraform fmt -check
