--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -84,7 +84,7 @@ jobs:
       - name: Verificando se bucket está criado
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
-          BUCKET_NAME="code-lambdas-functions"
+          BUCKET_NAME="code-lambdas-functions-produto"
             REGION="us-east-1"
 
             if ! aws s3api head-bucket --bucket "$BUCKET_NAME" 2>/dev/null; then
