--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -31,29 +31,29 @@ jobs:
       - name: Test
         run: dotnet test /p:CollectCoverage=true --collect:"XPlat Code Coverage" --results-directory ./coverage -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
 
-  SonarCloud:
-    needs: Build
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./src
+  # SonarCloud:
+  #   needs: Build
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       working-directory: ./src
 
-    steps:
-      - name: Checkout code
-        uses: actions/labeler@v4
-      - name: Analyze with SonarCloud
-        uses: SonarSource/sonarcloud-github-action@4006f663ecaf1f8093e8e4abb9227f6041f52216
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args:
-            -Dsonar.projectKey=fiap-grupo-12_TechChallenge_Lambda_Produto
-            -Dsonar.organization=fiap-grupo-12
-            -Dsonar.cs.opencover.reportsPaths=coverage/**/coverage.opencover.xml
-          projectBaseDir: .
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/labeler@v4
+  #     - name: Analyze with SonarCloud
+  #       uses: SonarSource/sonarcloud-github-action@4006f663ecaf1f8093e8e4abb9227f6041f52216
+  #       env:
+  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  #       with:
+  #         args:
+  #           -Dsonar.projectKey=fiap-grupo-12_TechChallenge_Lambda_Produto
+  #           -Dsonar.organization=fiap-grupo-12
+  #           -Dsonar.cs.opencover.reportsPaths=coverage/**/coverage.opencover.xml
+  #         projectBaseDir: .
 
   Publish:
-    needs: SonarCloud
+    # needs: SonarCloud
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -84,7 +84,7 @@ jobs:
       - name: Verificando se bucket está criado
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
-          BUCKET_NAME="code-lambdas-functions-produto2"
+          BUCKET_NAME="code-lambdas-functions-produto"
             REGION="us-east-1"
 
             if ! aws s3api head-bucket --bucket "$BUCKET_NAME" 2>/dev/null; then
@@ -97,7 +97,7 @@ jobs:
       - name: Upload to S3
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
-          BUCKET_NAME="code-lambdas-functions-produto2"
+          BUCKET_NAME="code-lambdas-functions-produto"
           aws s3api head-bucket --bucket "$BUCKET_NAME" || aws s3api create-bucket --bucket "$BUCKET_NAME"
           aws s3 cp lambda_produto_function.zip s3://$BUCKET_NAME/
 
@@ -123,7 +123,7 @@ jobs:
     - name: Verificando se bucket está criado
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: |
-        BUCKET_NAME="code-lambdas-functions-produto2"
+        BUCKET_NAME="terraform-tfstate-grupo12-fiap-2024-produto"
         REGION="us-east-1"
 
         if ! aws s3api head-bucket --bucket "$BUCKET_NAME" 2>/dev/null; then
