--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -31,30 +31,29 @@ jobs:
       - name: Test
         run: dotnet test /p:CollectCoverage=true --collect:"XPlat Code Coverage" --results-directory ./coverage -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
 
-  # SonarCloud:
-  #   needs: Build
-  #   runs-on: ubuntu-latest
-  #   defaults:
-  #     run:
-  #       working-directory: ./src
+  SonarCloud:
+    needs: Build
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src
 
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/labeler@v4
-  #     - name: Analyze with SonarCloud
-  #       uses: SonarSource/sonarcloud-github-action@4006f663ecaf1f8093e8e4abb9227f6041f52216
-  #       env:
-  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  #       with:
-  #         args:
-  #           -Dsonar.projectKey=fiap-grupo-12_TechChallenge_Lambda_Produto
-  #           -Dsonar.organization=fiap-grupo-12
-  #           -Dsonar.cs.opencover.reportsPaths=coverage/**/coverage.opencover.xml
-  #         projectBaseDir: .
+    steps:
+      - name: Checkout code
+        uses: actions/labeler@v4
+      - name: Analyze with SonarCloud
+        uses: SonarSource/sonarcloud-github-action@4006f663ecaf1f8093e8e4abb9227f6041f52216
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args:
+            -Dsonar.projectKey=fiap-grupo-12_TechChallenge_Lambda_Produto
+            -Dsonar.organization=fiap-grupo-12
+            -Dsonar.cs.opencover.reportsPaths=coverage/**/coverage.opencover.xml
+          projectBaseDir: .
 
   Publish:
-    # needs: SonarCloud
-    needs: Build
+    needs: SonarCloud
     runs-on: ubuntu-latest
     defaults:
       run:
