--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -74,6 +74,7 @@ jobs:
         run: dotnet lambda package --configuration Release --output-package ./lambda_produto_function.zip
 
       - name: Configure AWS credentials
+        if: github.ref == 'refs/heads/main' && github.event_name == 'pull_request'
         uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -160,7 +161,6 @@ jobs:
       run: terraform fmt -check
 
     - name: Terraform Plan
-      if: github.ref == 'refs/heads/release/*' && github.event_name == 'push'
       run: terraform plan -input=false
 
     - name: Apply Terraform
