--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -74,7 +74,7 @@ jobs:
         run: dotnet lambda package --configuration Release --output-package ./lambda_produto_function.zip
 
       - name: Configure AWS credentials
-        if: github.ref == 'refs/heads/main' && github.event_name == 'pull_request'
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -82,7 +82,7 @@ jobs:
           aws-region: us-east-1
 
       - name: Verificando se bucket da função lambda está criado
-        if: github.ref == 'refs/heads/main' && github.event_name == 'pull_request'
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
           BUCKET_NAME="code-lambdas-functions-produto"
             REGION="us-east-1"
@@ -95,7 +95,7 @@ jobs:
             fi
 
       - name: Upload to S3
-        if: github.ref == 'refs/heads/main' && github.event_name == 'pull_request'
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
           BUCKET_NAME="code-lambdas-functions-produto"
           aws s3api head-bucket --bucket "$BUCKET_NAME" || aws s3api create-bucket --bucket "$BUCKET_NAME"
@@ -164,5 +164,5 @@ jobs:
       run: terraform plan -input=false
 
     - name: Apply Terraform
-      if: github.ref == 'refs/heads/main' && github.event_name == 'pull_request'
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: terraform apply -auto-approve
