--- a/src/Infra/FIAP.TechChallenge.LambdaProduto.Infra.csproj
+++ b/src/Infra/FIAP.TechChallenge.LambdaProduto.Infra.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="PaymentGateway\**" />
+    <EmbeddedResource Remove="PaymentGateway\**" />
+    <None Remove="PaymentGateway\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
@@ -23,10 +29,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Application\FIAP.TechChallenge.LambdaProduto.Application.csproj" />
     <ProjectReference Include="..\Domain\FIAP.TechChallenge.LambdaProduto.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="PaymentGateway\" />
   </ItemGroup>
 
 </Project>
